Fix spacing and styling on charts.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -131,3 +131,12 @@ a i {
   background-color: #F2DEDE;
   color: #B94A48;
 }
+
+.chart {
+  margin-bottom: 15px;
+  border: 1px solid #aaa;
+  background-color: #fff;
+  margin-bottom: 25px;
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
+  border-radius: 2px;
+}
